feat: add a noetbook for training

--- a/notebooks/training/evaluate_ner_model_colab.ipynb
+++ b/notebooks/training/evaluate_ner_model_colab.ipynb
@@ -1,9 +1,15 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "id": "f924d7b7",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
    "source": [
     "# 📦 Environment Setup\n",
     "!pip install -q transformers datasets mlflow seqeval\n",
@@ -83,6 +89,28 @@
    "source": [
     "# 🔄  Pull data/model using DVC\n",
     "!dvc pull"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ce360b6e",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Colab cell to run your fine-tuning main.py with Hydra config overrides\n",
+    "\n",
+    "!python src/train/main.py \\\n",
+    "  model.name_or_path=xlm-roberta-base \\\n",
+    "  training.epochs=3 \\\n",
+    "  training.batch_size=16 \\\n",
+    "  data.conll_file=data/labeled/train.conll \\\n",
+    "  output_dir=models/ner \\\n",
+    "  logging.level=INFO\n"
    ]
   },
   {
