--- a/notebooks/training/evaluate_ner_model_colab.ipynb
+++ b/notebooks/training/evaluate_ner_model_colab.ipynb
@@ -4,155 +4,166 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "f924d7b7",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# 📦 Environment Setup\n",
-    "!pip install -q transformers datasets mlflow seqeval\n",
-    "!pip install -q git+https://github.com/huggingface/transformers.git  # Optional: latest\n",
-    "!pip install -q dvc[gdrive]\n",
-    "!git clone https://github.com/Teshager21/amharic-telegram-ecommerce-ner.git\n",
-    "%cd amharic-telegram-ecommerce-ner\n",
-    "\n",
-    "# 📁 Mount Google Drive (Optional)\n",
-    "from google.colab import drive\n",
-    "drive.mount('/content/drive')"
+    "# 📦 1. Install required dependencies\n",
+    "!pip install -q \"dvc[gdrive]\" transformers datasets mlflow seqeval\n",
+    "!pip install -q git+https://github.com/huggingface/transformers.git"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "42ad1ee0",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# ⚙️ DVC Setup (if needed to pull model/data from Google Drive)\n",
-    "!pip install -q dvc[gdrive]"
+    "# 🧠 2. Clone the repo from the correct branch\n",
+    "!git clone --branch task-3 https://github.com/Teshager21/amharic-telegram-ecommerce-ner.git\n",
+    "%cd amharic-telegram-ecommerce-ner\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b45e2a4c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 🔐 3. Upload service account key and configure DVC remote\n",
+    "from google.colab import files\n",
+    "import shutil, os\n",
+    "from pathlib import Path\n",
+    "\n",
+    "# Upload the file\n",
+    "uploaded = files.upload()\n",
+    "filename = next(iter(uploaded))  # get the uploaded filename\n",
+    "\n",
+    "# Move it to a safe path (avoid special characters)\n",
+    "key_path = Path(\"/content/sa_key.json\")\n",
+    "shutil.move(filename, key_path)\n",
+    "\n",
+    "# Configure DVC to use the uploaded key\n",
+    "!dvc remote modify gdrive_remote gdrive_use_service_account true\n",
+    "!dvc remote modify gdrive_remote gdrive_service_account_json_file_path {key_path}"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "3efa7805",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# 📎 Upload your service account JSON\n",
-    "from google.colab import files\n",
+    "# ✅ 4. Pull data using DVC (with service account)\n",
+    "import subprocess\n",
     "\n",
-    "uploaded = files.upload()  # Select your `dvc-drive-remote-XXXX.json`"
+    "def dvc_pull_with_feedback():\n",
+    "    print(\"📥 Pulling DVC-tracked data from Google Drive remote...\")\n",
+    "    result = subprocess.run([\"dvc\", \"pull\", \"-v\"], capture_output=True, text=True)\n",
+    "    if result.returncode == 0:\n",
+    "        print(\"✅ DVC pull successful.\")\n",
+    "    else:\n",
+    "        print(\"❌ DVC pull failed:\")\n",
+    "        print(result.stderr)\n",
+    "\n",
+    "dvc_pull_with_feedback()\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "22d1c35b",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "!dvc remote add -d gdrive_remote gdrive://1UveBgDaVcNQi1T-fLA-Kz03hPRqJ_ayk"
+    "# !dvc remote add -d gdrive_remote gdrive://1UveBgDaVcNQi1T-fLA-Kz03hPRqJ_ayk"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "c30da414",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# 💾 Upload service account key and point DVC to it\n",
+    "# # 1. Upload the service account JSON key file\n",
+    "# from google.colab import files\n",
+    "# import os\n",
+    "# import shutil\n",
+    "# from pathlib import Path\n",
     "\n",
-    "from google.colab import files\n",
+    "# uploaded = files.upload()\n",
+    "# filename = next(iter(uploaded))  # Get the uploaded filename\n",
+    "# src = Path(\"/content\") / filename\n",
     "\n",
-    "# Upload your service account JSON key file from local machine\n",
-    "uploaded = files.upload()\n",
+    "# # 2. Move to your repo’s secrets folder\n",
+    "# repo_secrets_path = Path(\"/content/amharic-telegram-ecommerce-ner/secrets\")\n",
+    "# repo_secrets_path.mkdir(parents=True, exist_ok=True)\n",
     "\n",
-    "# Get the filename of the uploaded file (assumes single file upload)\n",
-    "filename = next(iter(uploaded))\n",
-    "key_path = f\"/content/{filename}\"\n",
+    "# dest = repo_secrets_path / \"dvc-sa-key.json\"\n",
+    "# shutil.move(str(src), str(dest))\n",
     "\n",
-    "# Check that the DVC remote exists before modifying\n",
-    "!dvc remote list\n",
-    "\n",
-    "# Modify the DVC remote config to use the uploaded service account key\n",
-    "!dvc remote modify gdrive_remote gdrive_service_account_json_file_path {key_path}\n",
-    "\n",
-    "print(f\"✅ DVC remote 'gdrive_remote' now uses service account JSON at: {key_path}\")\n"
+    "# print(f\"✅ Key moved to repo secrets folder at: {dest}\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "5888db51",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# 🔍 Check DVC remote config before pulling data\n",
-    "!dvc remote list\n",
+    "# # 🔍 Check DVC remote config before pulling data\n",
+    "# !dvc remote list\n",
     "\n",
-    "# Optionally, check detailed config\n",
-    "!cat .dvc/config\n",
+    "# # Optionally, check detailed config\n",
+    "# !cat .dvc/config\n",
     "\n",
-    "# Pull data and model if remote exists\n",
-    "import subprocess\n",
+    "# # Pull data and model if remote exists\n",
+    "# import subprocess\n",
     "\n",
-    "def dvc_pull_if_remote_exists(remote_name=\"gdrive_remote\"):\n",
-    "    remotes = subprocess.getoutput(\"dvc remote list\").splitlines()\n",
-    "    remote_names = [line.split()[0] for line in remotes]\n",
-    "    if remote_name in remote_names:\n",
-    "        print(f\"✅ Found remote '{remote_name}'. Pulling data...\")\n",
-    "        # Use subprocess.run to set environment var and run dvc pull properly\n",
-    "        result = subprocess.run(\n",
-    "            [\"dvc\", \"pull\"],\n",
-    "            env={**os.environ, \"DVC_GDRIVE_USE_SERVICE_ACCOUNT\": \"true\"},\n",
-    "            capture_output=True,\n",
-    "            text=True,\n",
-    "        )\n",
-    "        print(result.stdout)\n",
-    "        if result.returncode != 0:\n",
-    "            print(\"❌ Error during dvc pull:\")\n",
-    "            print(result.stderr)\n",
-    "    else:\n",
-    "        print(f\"❌ Remote '{remote_name}' not found. Please configure your DVC remote first.\")\n",
+    "# def dvc_pull_if_remote_exists(remote_name=\"gdrive_remote\"):\n",
+    "#     remotes = subprocess.getoutput(\"dvc remote list\").splitlines()\n",
+    "#     remote_names = [line.split()[0] for line in remotes]\n",
+    "#     if remote_name in remote_names:\n",
+    "#         print(f\"✅ Found remote '{remote_name}'. Pulling data...\")\n",
     "\n",
-    "import os\n",
-    "dvc_pull_if_remote_exists()"
+    "#         env = {**os.environ, \"DVC_GDRIVE_USE_SERVICE_ACCOUNT\": \"true\"}\n",
+    "#         result = subprocess.run(\n",
+    "#             [\"dvc\", \"pull\", \"-v\"],  # verbose\n",
+    "#             env=env,\n",
+    "#             capture_output=True,\n",
+    "#             text=True,\n",
+    "#         )\n",
+    "\n",
+    "#         print(result.stdout)\n",
+    "#         if result.returncode != 0:\n",
+    "#             print(\"❌ Error during dvc pull:\")\n",
+    "#             print(result.stderr)\n",
+    "#     else:\n",
+    "#         print(f\"❌ Remote '{remote_name}' not found.\")\n",
+    "\n",
+    "\n",
+    "# import os\n",
+    "# dvc_pull_if_remote_exists()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "ce360b6e",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "python: can't open file '/home/teshager/Documents/10Academy/repositories/projects/amharic-telegram-ecommerce-ner/notebooks/training/src/train/main.py': [Errno 2] No such file or directory\n"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
     "# Colab cell to run your fine-tuning main.py with Hydra config overrides\n",
     "\n",
@@ -169,11 +180,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "3c7ad5ef",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# 🧠 Evaluate NER Model\n",
@@ -191,11 +198,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "720edc6e",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Paths for model and test data\n",
@@ -207,11 +210,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "b8f75182",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Run evaluation\n",
@@ -229,11 +228,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "7d9d9a7f",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Launch MLflow UI in Colab\n",
@@ -247,11 +242,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "78b42c79",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# 📊 View MLflow Run (Optional)\n",
@@ -260,8 +251,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
