fix: load the src folder in colab

--- a/notebooks/training/evaluate_ner_model_colab.ipynb
+++ b/notebooks/training/evaluate_ner_model_colab.ipynb
@@ -20,7 +20,13 @@
    "outputs": [],
    "source": [
     "# 🧠 2. Clone the repo from the correct branch\n",
+    "# 🚫 Remove the nested repo folder if it exists\n",
+    "!rm -rf amharic-telegram-ecommerce-ner\n",
+    "\n",
+    "# ✅ Then re-clone cleanly\n",
     "!git clone --branch task-3 https://github.com/Teshager21/amharic-telegram-ecommerce-ner.git\n",
+    "\n",
+    "# Move into the clean project directory\n",
     "%cd amharic-telegram-ecommerce-ner\n"
    ]
   },
@@ -88,13 +94,14 @@
    "source": [
     "# Colab cell to run your fine-tuning main.py with Hydra config overrides\n",
     "\n",
-    "!python src/train/main.py \\\n",
+    "# ✅ Colab cell to run fine-tuning with proper Python path\n",
+    "!PYTHONPATH=src python src/train/main.py \\\n",
     "  model.name_or_path=xlm-roberta-base \\\n",
     "  training.epochs=3 \\\n",
     "  training.batch_size=16 \\\n",
     "  data.conll_file=data/labeled/train.conll \\\n",
     "  output_dir=models/ner \\\n",
-    "  logging.level=INFO\n"
+    "  logging.level=INFO"
    ]
   },
   {
