fix: relocate the train.config file to the config folder

--- a/notebooks/training/evaluate_ner_model_colab.ipynb
+++ b/notebooks/training/evaluate_ner_model_colab.ipynb
@@ -9,7 +9,8 @@
    "source": [
     "# 📦 1. Install required dependencies\n",
     "!pip install -q \"dvc[gdrive]\" transformers datasets mlflow seqeval\n",
-    "!pip install -q git+https://github.com/huggingface/transformers.git"
+    "!pip install -q git+https://github.com/huggingface/transformers.git\n",
+    "!pip show transformers"
    ]
   },
   {
