fix: add the path for the split labeled data

--- a/notebooks/training/evaluate_ner_model_colab.ipynb
+++ b/notebooks/training/evaluate_ner_model_colab.ipynb
@@ -8,7 +8,7 @@
    "outputs": [],
    "source": [
     "# 📦 1. Install required dependencies\n",
-    "!pip install -q \"dvc[gdrive]\" transformers datasets mlflow seqeval\n",
+    "!pip install -q \"dvc[gdrive]\" transformers==4.12.0 datasets mlflow seqeval\n",
     "!pip install -q git+https://github.com/huggingface/transformers.git\n",
     "!pip show transformers"
    ]
@@ -28,7 +28,7 @@
     "!git clone --branch task-3 https://github.com/Teshager21/amharic-telegram-ecommerce-ner.git\n",
     "\n",
     "# Move into the clean project directory\n",
-    "%cd amharic-telegram-ecommerce-ner\n"
+    "%cd amharic-telegram-ecommerce-ner"
    ]
   },
   {
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "ce360b6e",
    "metadata": {},
    "outputs": [
@@ -93,14 +93,16 @@
     }
    ],
    "source": [
-    "# Colab cell to run your fine-tuning main.py with Hydra config overrides\n",
-    "\n",
-    "# ✅ Colab cell to run fine-tuning with proper Python path\n",
+    "# ✅ Colab cell to run fine-tuning with updated Hydra config (no old keys)\n",
+    "import os\n",
+    "os.environ[\"WANDB_MODE\"] = \"offline\"\n",
     "!PYTHONPATH=src python src/train/main.py \\\n",
     "  model.name_or_path=xlm-roberta-base \\\n",
     "  training.epochs=3 \\\n",
     "  training.batch_size=16 \\\n",
-    "  data.conll_file=data/labeled/train.conll \\\n",
+    "  training.evaluation_strategy=epoch \\\n",
+    "  data.train_file=data/labeled/train_split.conll \\\n",
+    "  data.eval_file=data/labeled/eval_split.conll \\\n",
     "  output_dir=models/ner \\\n",
     "  logging.level=INFO"
    ]
