--- a/notebooks/training/evaluate_ner_model_colab.ipynb
+++ b/notebooks/training/evaluate_ner_model_colab.ipynb
@@ -5,16 +5,16 @@
       "execution_count": 39,
       "id": "f924d7b7",
       "metadata": {
-        "id": "f924d7b7",
-        "outputId": "788c1c9c-7f94-4316-c8ee-c8c07391479e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "f924d7b7",
+        "outputId": "788c1c9c-7f94-4316-c8ee-c8c07391479e"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "  Installing build dependencies ... \u001b[?25l\u001b[?25hdone\n",
             "  Getting requirements to build wheel ... \u001b[?25l\u001b[?25hdone\n",
@@ -41,19 +41,33 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "id": "f74e2fb5",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import os\n",
+        "\n",
+        "# 1. Set API key and switch to online mode\n",
+        "os.environ[\"WANDB_API_KEY\"] = \"a3e57f43963988bf3e9d50b1663ff787f79afb7d\"\n",
+        "os.environ[\"WANDB_MODE\"] = \"online\""
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": 40,
       "id": "42ad1ee0",
       "metadata": {
-        "id": "42ad1ee0",
-        "outputId": "8d1d4335-df08-4e47-99d5-0b84dcf0fb22",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "42ad1ee0",
+        "outputId": "8d1d4335-df08-4e47-99d5-0b84dcf0fb22"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Cloning into 'amharic-telegram-ecommerce-ner'...\n",
             "remote: Enumerating objects: 234, done.\u001b[K\n",
@@ -83,20 +97,16 @@
       "execution_count": 41,
       "id": "b45e2a4c",
       "metadata": {
-        "id": "b45e2a4c",
-        "outputId": "e6716356-285b-478c-b1cc-84cc034ea38a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 73
-        }
+        },
+        "id": "b45e2a4c",
+        "outputId": "e6716356-285b-478c-b1cc-84cc034ea38a"
       },
       "outputs": [
         {
-          "output_type": "display_data",
           "data": {
-            "text/plain": [
-              "<IPython.core.display.HTML object>"
-            ],
             "text/html": [
               "\n",
               "     <input type=\"file\" id=\"files-80c046ce-47c8-43a2-84bc-0877cef72ec7\" name=\"files[]\" multiple disabled\n",
@@ -281,13 +291,17 @@
               "};\n",
               "})(self);\n",
               "</script> "
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
             ]
           },
-          "metadata": {}
+          "metadata": {},
+          "output_type": "display_data"
         },
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Saving dvc-drive-remote-8f00f1ce2758.json to dvc-drive-remote-8f00f1ce2758.json\n",
             "\u001b[0m\u001b[0m"
@@ -318,16 +332,16 @@
       "execution_count": 42,
       "id": "3efa7805",
       "metadata": {
-        "id": "3efa7805",
-        "outputId": "85738120-cc81-41c3-b085-38be2184c7ad",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "3efa7805",
+        "outputId": "85738120-cc81-41c3-b085-38be2184c7ad"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "📥 Pulling DVC-tracked data from Google Drive remote...\n",
             "✅ DVC pull successful.\n"
@@ -352,40 +366,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": null,
       "id": "ce360b6e",
       "metadata": {
-        "id": "ce360b6e",
-        "outputId": "9de36b6e-e256-4075-d9e8-04e71f2e57c3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ce360b6e",
+        "outputId": "9de36b6e-e256-4075-d9e8-04e71f2e57c3"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "2025-06-20 15:29:41.657525: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:477] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
-            "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
-            "E0000 00:00:1750433381.682919   23580 cuda_dnn.cc:8310] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-            "E0000 00:00:1750433381.690399   23580 cuda_blas.cc:1418] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-            "2025-06-20 15:29:41.716014: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
-            "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-            "Could not override 'training.evaluation_strategy'.\n",
-            "To append to your config use +training.evaluation_strategy=epoch\n",
-            "Key 'evaluation_strategy' is not in struct\n",
-            "    full_key: training.evaluation_strategy\n",
-            "    object_type=dict\n",
-            "\n",
-            "Set the environment variable HYDRA_FULL_ERROR=1 for a complete stack trace.\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# ✅ Colab cell to run fine-tuning with updated Hydra config (no old keys)\n",
-        "import os\n",
-        "os.environ[\"WANDB_MODE\"] = \"offline\"\n",
         "!PYTHONPATH=src python src/train/main.py \\\n",
         "  model.name_or_path=xlm-roberta-base \\\n",
         "  training.epochs=3 \\\n",
@@ -479,9 +471,26 @@
         "# 📊 View MLflow Run (Optional)\n",
         "!ls -lh mlruns/"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "4c18fc9c",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "!dvc add mlruns\n",
+        "!dvc push\n",
+        "!git add mlruns.dvc .gitignore\n",
+        "!git commit -m \"feat:track MLflow experiment logs\"\n",
+        "!git push"
+      ]
     }
   ],
   "metadata": {
+    "colab": {
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": "venv",
       "language": "python",
@@ -498,9 +507,6 @@
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
       "version": "3.10.12"
-    },
-    "colab": {
-      "provenance": []
     }
   },
   "nbformat": 4,
