fix: Evaluation failed: list object has no attribute size"

--- a/notebooks/training/evaluate_ner_model_colab.ipynb
+++ b/notebooks/training/evaluate_ner_model_colab.ipynb
@@ -420,7 +420,7 @@
       "source": [
         "# Paths for model and test data\n",
         "MODEL_PATH = \"models/ner\"  # Path to your fine-tuned model directory\n",
-        "TEST_DATA_PATH = \"data/processed/ner_test.conll\"  # Path to your test dataset in CoNLL format\n"
+        "TEST_DATA_PATH = \"data/labeled/eval_split.conll\"  # Path to your test dataset in CoNLL format\n"
       ]
     },
     {
