feat: add a functionality to be able push to github from colab

--- a/notebooks/training/evaluate_ner_model_colab.ipynb
+++ b/notebooks/training/evaluate_ner_model_colab.ipynb
@@ -480,10 +480,66 @@
       "outputs": [],
       "source": [
         "!dvc add mlruns\n",
-        "!dvc push\n",
-        "!git add mlruns.dvc .gitignore\n",
-        "!git commit -m \"feat:track MLflow experiment logs\"\n",
+        "!dvc add models/ner\n",
         "!git push"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "a2aee0bb",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "!ls models/ner.dvc\n",
+        "!ls mlruns.dvc"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "ae26fd1f",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from getpass import getpass\n",
+        "# 🔐 Prompt for your GitHub token (hidden input)\n",
+        "token = getpass(\"🔐 Paste your GitHub token: \")\n",
+        "\n",
+        "# ✅ Configure Git identity (you can use your GitHub email and username)\n",
+        "!git config --global user.email \"teshager8922@gmail.com\"\n",
+        "!git config --global user.name \"Teshager21\"\n",
+        "\n",
+        "# ✅ Set the remote URL with token (change this to your repo)\n",
+        "username = \"Teshager21\"\n",
+        "repo = \"amharic-telegram-ecommerce-ner\"\n",
+        "os.environ[\"GITHUB_TOKEN\"] = token\n",
+        "\n",
+        "# ⬇️ Set remote with token\n",
+        "!git remote set-url origin https://{username}:{token}@github.com/{username}/{repo}.git"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "942e7b70",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "!git add models/ner.dvc mlruns.dvc .gitignore\n",
+        "!git commit -m \"data: 🔁 track MLflow experiment logs\"\n",
+        "# Push to the main branch\n",
+        "!git push origin main"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "7f7c3d5a",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "!dvc push"
       ]
     }
   ],
