fix: trainer evaluater conflict

--- a/notebooks/training/evaluate_ner_model_colab.ipynb
+++ b/notebooks/training/evaluate_ner_model_colab.ipynb
@@ -526,10 +526,10 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "!git add models/ner.dvc mlruns.dvc .gitignore\n",
+        "!git add models/ner.dvc mlruns.dvc .gitignore .dvc/config\n",
         "!git commit -m \"data: 🔁 track MLflow experiment logs\"\n",
         "# Push to the main branch\n",
-        "!git push origin main"
+        "!git push origin task-3"
       ]
     },
     {
